[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lapis-sim"
version = "0.4.2"
description = "Lapis is an adaptable, performant, and interactive scheduling (Lapis) simulator"
license = "MIT"
authors = ["Eileen Kuehn, Max Fischer <mainekuehn@gmail.com>"]
maintainers = ["MatterMiners <matterminers@lists.kit.edu>"]
readme = "README.rst"
homepage = "https://matterminers.github.io"
repository = "https://github.com/MatterMiners/lapis"
documentation = "https://lapis-sim.readthedocs.io/en/latest/"
keywords = ["htcondor", "simulation", "tardis", "opportunistic", "scheduling"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Topic :: Adaptive Technologies",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: System :: Distributed Computing",
    "Programming Language :: Python :: 3",
]
packages = [
    { include = "lapis" }
]

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[tool.poetry.dependencies]
python = "^3.6.1"
cobald = "^0.12"
usim = "^0.4"
click = "^7.1"

Sphinx = { version = "^3.3.1", optional = true }
sphinx-rtd-theme = { version = "^0.5.0", optional = true }
sphinxcontrib-contentui = { version = "^0.2.5", optional = true }
sphinx-click = { version = "^2.5.0", optional = true }
change-log = { version = "^0.2.0", optional = true }

pytest = { version = ">= 4.3.0", optional = true }
flake8 = { version = "^3.8.4", optional = true }
flake8-bugbear = { version = "^20.11.1", optional = true }
black = { version = "^20.8b1", markers = "implementation_name=='cpython'", optional = true }

[tool.poetry.extras]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
    "sphinxcontrib-contentui",
    "sphinx-click",
    "change-log",
]
test = [
    "pytest",
    "flake8",
    "flake8-bugbear",
    "black"
]
